<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/nunito_extra_bold"
                android:text="@string/login_pemilih"
                android:textColor="@color/blue"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_word"
                android:fontFamily="@font/titilliumweb_semibold"
                android:layout_marginHorizontal="20dp"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                android:textSize="18sp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="16dp">

                <RadioButton
                    android:id="@+id/rb_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:paddingHorizontal="8dp"
                    android:text="Email"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rb_nik"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:layout_marginRight="16dp"
                    android:text="NIK"
                    android:textStyle="bold"/>
            </RadioGroup>

            <TextView
                android:id="@+id/label_email_nik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nik_email"
                android:layout_gravity="left"
                android:fontFamily="@font/roboto_bold"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="20sp"
                android:textColor="@color/black"
                android:visibility="gone"/>
            <EditText
                android:id="@+id/nik_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_txtinptlogin"
                android:paddingVertical="8dp"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="6dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/ic_user"
                android:paddingHorizontal="15dp"
                android:inputType="textEmailAddress"
                android:drawablePadding="10dp"
                android:hint="@string/hint_nik_email"
                android:textColorHint="@color/hint"
                android:visibility="gone"/>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_background_blue"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/btn_login"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:backgroundTint="#70B5E8" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>