<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginVertical="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_calon"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/foto_calon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            tools:srcCompat="@drawable/ic_holder_calon" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/nama_calon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/titilliumweb_semibold"
        android:text="@string/nama_holder"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/no_calon"
        app:layout_constraintTop_toTopOf="@+id/cv_calon" />

    <TextView
        android:id="@+id/no_calon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="@drawable/circle_background_green"
        android:fontFamily="@font/titilliumweb_semibold"
        android:paddingHorizontal="4dp"
        android:paddingVertical="0dp"
        android:text="@string/nocalon_holder2"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/nama_calon"
        app:layout_constraintStart_toEndOf="@+id/cv_calon"
        app:layout_constraintTop_toTopOf="@+id/nama_calon" />

    <TextView
        android:id="@+id/periode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/titilliumweb_semibold"
        android:text="@string/periode_holder"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/jumlah_vote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_calon"
        app:layout_constraintTop_toBottomOf="@+id/nama_calon" />

    <TextView
        android:id="@+id/jumlah_vote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/titilliumweb_semibold"
        android:text="@string/jumlah_suara_holder"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_calon"
        app:layout_constraintTop_toBottomOf="@+id/periode" />

    <TextView
        android:id="@+id/presentase_vote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/titilliumweb_semibold"
        android:text="@string/presentasi_holder"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_calon"
        app:layout_constraintTop_toBottomOf="@+id/jumlah_vote" />

    <ProgressBar
        android:id="@+id/percent_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:max="100"
        android:progress="60"
        android:theme="@style/Theme.RTVote"
        app:layout_constraintBottom_toBottomOf="@+id/cv_calon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_calon"
        app:layout_constraintTop_toBottomOf="@+id/presentase_vote" />

</androidx.constraintlayout.widget.ConstraintLayout>